# Sysgrab

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  art.txt  config.txt  data.c  data.h  main.c  sysgrab.c
.github/workflows/: release.yml
include/: art.h  config.h
resources/: config.txt
src/: art.c  config.c  data.c  main.c  sysgrab.c
